<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:id="@+id/card_view_query"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp">

            <TextView
                android:id="@+id/question_answer_item_username_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="3dp"
                android:text="@string/user_name"
                android:textColor="#000"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/question_answer_item_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:text="@string/date"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/question_answer_item_question"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/question_answer_item_username_id"
                android:layout_marginTop="5dp"
                android:padding="3dp"
                android:text="@string/question"
                android:textColor="#000" />

            <TextView
                android:id="@+id/question_answer_item_answer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/question_answer_item_question"
                android:layout_marginTop="5dp"
                android:padding="5dp"
                android:hint="@string/answer"
                android:textColor="#000"
                android:background="#fafafa" />

        </RelativeLayout>

    </androidx.cardview.widget.CardView>

</RelativeLayout>