<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="200dp"
    android:background="#FFF">

    <TextView
        android:id="@+id/text1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/please_give_your_email"
        android:layout_marginTop="10dp"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/text2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/text1"
        android:gravity="center"
        android:text="@string/an_email_will_be_sent_to_you_to_reset_your_password"
        android:textSize="17sp"
        android:textStyle="bold" />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/text2"
        android:layout_marginTop="5dp"
        android:padding="5dp">


        <EditText
            android:id="@+id/reset_password_dialog_email_edit_view_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/user_email_com" />

        <LinearLayout
            android:id="@+id/reset_password_dialog_linear_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/reset_password_dialog_email_edit_view_id"
            android:baselineAligned="false"
            android:orientation="horizontal"
            android:padding="6dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="0dp"
                android:layout_weight="1">

                <Button
                    android:id="@+id/reset_password_reset_button_cancel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="2dp"
                    android:background="@drawable/button_style_selector"
                    android:text="@string/cancel"
                    android:textColor="@color/white" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <Button
                    android:id="@+id/reset_password_reset_button_update"
                    android:layout_width="193dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="2dp"
                    android:layout_marginLeft="2dp"
                    android:layout_marginTop="2dp"
                    android:layout_marginEnd="2dp"
                    android:layout_marginRight="2dp"
                    android:layout_marginBottom="2dp"
                    android:background="@drawable/button_style_selector"
                    android:padding="5dp"
                    android:text="@string/update"
                    android:textColor="@color/white" />
            </RelativeLayout>
        </LinearLayout>

    </RelativeLayout>

</RelativeLayout>